[package]
name = "rust-vulkan-engine"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
bytemuck = "1.12.1"
image = "0.24"
vulkano-win = "0.32.0"
winit = "0.28"
glam = "0.28.0"
nanoid = "0.4.0"
rand = "0.8"
egui_winit_vulkano = "0.27.0"



[profile.dev]
opt-level = 1